app/src/test/resources/programs/invalid/foreign/bad_arguments.exe
foreign fun add(x: Int, y: Int, z: Int) -> Int

fun main() -> Int{
    add(1, 2)
    add(1, 2, 3, 4)
    add(a=1, b=2, c=3)
}